--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocCheckBox.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocCheckBox.css
@@ -8,6 +8,7 @@
   border-radius: var(--remotion-themed-border-radius);
   box-sizing: border-box;
   vertical-align: middle;
+  min-width: min-content;
 }
 
 .bocCheckBox:not(.readOnly) input + span
