RM-8229 Update min-width calculation for BoxTextValue and BocMultilineTextValue to prevent border overlap.

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocTextValue.css
@@ -21,6 +21,7 @@ span.bocTextValue textarea
   display: inline-flex;
   align-items: center;
   width: fit-content;
+  min-width: min-content;
 }
 
 span.bocTextValue .content,
