--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocMultilineTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocMultilineTextValue.css
@@ -21,6 +21,7 @@ span.bocMultilineTextValue textarea
   display: inline-flex;
   align-items: center;
   width: fit-content;
+  min-width: min-content;
   min-height: 0;
 }
 
