--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocDateTimeValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocDateTimeValue.css
@@ -8,7 +8,7 @@ span.bocDateValue
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  overflow: hidden;
+  overflow: clip;
   white-space: nowrap;
 }
 
