--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocMultilineTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocMultilineTextValue.css
@@ -7,7 +7,7 @@ span.bocMultilineTextValue
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  overflow: hidden;
+  overflow: clip;
 }
 
 .bocMultilineTextValue.readOnly
