--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocTextValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocTextValue.css
@@ -7,7 +7,7 @@ span.bocTextValue
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  overflow: hidden;
+  overflow: clip;
 }
 
 .bocTextValue.readOnly
