--- a/SecurityManager/Clients.Web/res/Themes/NovaViso/HTML/Style.css
+++ b/SecurityManager/Clients.Web/res/Themes/NovaViso/HTML/Style.css
@@ -11,7 +11,7 @@ html
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: clip;
 }
 
 html body
@@ -19,7 +19,7 @@ html body
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: clip;
 }
 
 form
