--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocEnumValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocEnumValue.css
@@ -7,7 +7,7 @@ div.bocEnumValue.readOnly
   position: relative;
   display: inline-block;
   vertical-align: middle;
-  overflow: hidden;
+  overflow: clip;
 }
 
 .bocEnumValue.readOnly
