--- a/SecurityManager/Clients.Web/res/Themes/NovaGray/Html/Style.css
+++ b/SecurityManager/Clients.Web/res/Themes/NovaGray/Html/Style.css
@@ -3,7 +3,7 @@
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: clip;
 }
 
 html body
@@ -11,7 +11,7 @@ html body
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
+  overflow: clip;
 }
 
 form
