RM-9031 Add focus highlight to validation error marker in BocList

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocList.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocList.css
@@ -642,6 +642,11 @@ span.bocListAvailableViewsListLabel
   padding-top: 0.1em;
 }
 
+.bocList .validationErrorMarker:focus
+{
+  outline: auto 5px -webkit-focus-ring-color;
+}
+
 .bocList .validationErrorMarker > img
 {
   height: 16px;
