RM-7240 Support for handling all non success status codes during async Postrequest

--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/SmartPage.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/SmartPage.css
@@ -95,4 +95,12 @@
   color: navy !important;
   cursor: hand !important;
 }
+
+.SmartPageErrorBody iframe
+{
+  width: 100%;
+  height: calc(100% - 5em);
+  border: hidden;
+}
+
 /* end region */
