--- a/Remotion/Web/Core/Res/Themes/NovaGray/HTML/SmartPage.css
+++ b/Remotion/Web/Core/Res/Themes/NovaGray/HTML/SmartPage.css
@@ -98,6 +98,13 @@
   cursor: hand !important;
 }
 
+.SmartPageErrorBody iframe
+{
+  width: 100%;
+  height: calc(100% - 5em);
+  border: hidden;
+}
+
 /*html.SmartPageBusy .SmartPageSubmitter,
 html.SmartPageBusy button:focus,
 html.SmartPageBusy input:focus,
