RM-9066 Make validation failure markers non-clickable

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocList.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocList.css
@@ -642,7 +642,7 @@ span.bocListAvailableViewsListLabel
   padding-top: 0.1em;
 }
 
-.bocList .validationErrorMarker:focus
+.bocList .validationErrorMarker:focus-within
 {
   outline: auto 5px -webkit-focus-ring-color;
 }
