RM-9073 Fix broken scrolling on SingleView

--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/SingleView.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/SingleView.css
@@ -33,7 +33,7 @@ div.singleViewView
   grid-area: view;
   display: flex;
   flex-direction: column;
-  overflow: clip;
+  overflow: hidden;
 }
 
 div.singleViewView > div.contentBorder
