--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/Common.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/Common.css
@@ -430,21 +430,25 @@ a.remotion-themed:focus,
   outline: none;
 }
 
-select.remotion-themed,
-textarea.remotion-themed,
-.remotion-themed select,
-.remotion-themed textarea
+/* If either scrollbar-width`/`scrollbar-color` is specified, the `::-webkit-scrollbar` selectors won't work  */
+@supports not selector(::-webkit-scrollbar)
 {
-  scrollbar-width: var(--remotion-themed-scrollbar-style);
-  scrollbar-color: var(--remotion-themed-scrollbar-color-thumb) var(--remotion-themed-background-color-control);
-}
-
-select.remotion-themed:disabled,
-textarea.remotion-themed:disabled,
-.remotion-themed select:disabled,
-.remotion-themed textarea:disabled
-{
-  scrollbar-color: var(--color-disabled-border) var(--remotion-themed-background-color-disabled);
+  select.remotion-themed,
+  textarea.remotion-themed,
+  .remotion-themed select,
+  .remotion-themed textarea
+  {
+    scrollbar-width: var(--remotion-themed-scrollbar-style);
+    scrollbar-color: var(--remotion-themed-scrollbar-color-thumb) var(--remotion-themed-background-color-control);
+  }
+  
+  select.remotion-themed:disabled,
+  textarea.remotion-themed:disabled,
+  .remotion-themed select:disabled,
+  .remotion-themed textarea:disabled
+  {
+    scrollbar-color: var(--color-disabled-border) var(--remotion-themed-background-color-disabled);
+  }
 }
 
 select.remotion-themed::-webkit-scrollbar,
@@ -511,11 +515,15 @@ img.disabled,
   filter: grayscale(100%);
 }
 
-.remotion-themed.scrollable
+/* If either scrollbar-width`/`scrollbar-color` is specified, the `::-webkit-scrollbar` selectors won't work  */
+@supports not selector(::-webkit-scrollbar)
 {
-  overflow: auto;
-  scrollbar-width: var(--remotion-themed-scrollbar-style);
-  scrollbar-color: var(--remotion-themed-scrollbar-color);
+  .remotion-themed.scrollable
+  {
+    overflow: auto;
+    scrollbar-width: var(--remotion-themed-scrollbar-style);
+    scrollbar-color: var(--remotion-themed-scrollbar-color);
+  }
 }
 
 .remotion-themed.scrollable::-webkit-scrollbar-thumb
@@ -531,10 +539,14 @@ img.disabled,
   height: var(--remotion-themed-scrollbar-width);
 }
 
-.remotion-themed.scrollable > *
+/* If either scrollbar-width`/`scrollbar-color` is specified, the `::-webkit-scrollbar` selectors won't work  */
+@supports not selector(::-webkit-scrollbar)
 {
-  scrollbar-color: initial; /* Stop inheriting the scrollbar color to child elements */
-  scrollbar-width: initial; /* Stop inheriting the scrollbar width to child elements */
+  .remotion-themed.scrollable > *
+  {
+    scrollbar-color: initial; /* Stop inheriting the scrollbar color to child elements */
+    scrollbar-width: initial; /* Stop inheriting the scrollbar width to child elements */
+  }
 }
 
 .screenReaderText
