--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/SingleView.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/SingleView.css
@@ -42,9 +42,17 @@ div.singleViewView > div.contentBorder
   overflow: auto;
   /* for symmetry with TabbedMultiView */
   border: var(--remotion-themed-border-placeholder);
-  scrollbar-width: var(--remotion-themed-scrollbar-style);
-  scrollbar-color: var(--remotion-themed-scrollbar-color);
   height: 100%;
+}
+
+/* If either scrollbar-width`/`scrollbar-color` is specified, the `::-webkit-scrollbar` selectors won't work  */
+@supports not selector(::-webkit-scrollbar)
+{
+  div.singleViewView > div.contentBorder
+  {
+    scrollbar-width: var(--remotion-themed-scrollbar-style);
+    scrollbar-color: var(--remotion-themed-scrollbar-color);
+  }
 }
 
 div.singleViewView > div.contentBorder::-webkit-scrollbar-thumb
@@ -64,8 +72,16 @@ div.singleViewView > div.contentBorder > div.content
 {
   height: 100%;
   box-sizing: border-box;
-  scrollbar-color: initial; /* Stop inheriting the scrollbar color to child elements */
-  scrollbar-width: initial; /* Stop inheriting the scrollbar width to child elements */
+}
+
+/* If either scrollbar-width`/`scrollbar-color` is specified, the `::-webkit-scrollbar` selectors won't work  */
+@supports not selector(::-webkit-scrollbar)
+{
+  div.singleViewView > div.contentBorder > div.content
+  {
+    scrollbar-color: initial; /* Stop inheriting the scrollbar color to child elements */
+    scrollbar-width: initial; /* Stop inheriting the scrollbar width to child elements */
+  }
 }
 
 /* Applied to the top section of the single view. */
